// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 1`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="preview"
      isCurrent={false}
    >
      <IconOpenWith
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Preview"
        id="be.sidebarVersions.preview"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="download"
      isCurrent={false}
    >
      <IconDownload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Download"
        id="be.sidebarVersions.download"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="promote"
      isCurrent={false}
    >
      <IconUpload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Make Current"
        id="be.sidebarVersions.promote"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="remove"
      isCurrent={false}
    >
      <IconTrash
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="be.sidebarVersions.delete"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 2`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="preview"
      isCurrent={false}
    >
      <IconOpenWith
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Preview"
        id="be.sidebarVersions.preview"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="download"
      isCurrent={false}
    >
      <IconDownload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Download"
        id="be.sidebarVersions.download"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="remove"
      isCurrent={false}
    >
      <IconTrash
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="be.sidebarVersions.delete"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 3`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="download"
      isCurrent={false}
    >
      <IconDownload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Download"
        id="be.sidebarVersions.download"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="remove"
      isCurrent={false}
    >
      <IconTrash
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="be.sidebarVersions.delete"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 4`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="remove"
      isCurrent={false}
    >
      <IconTrash
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="be.sidebarVersions.delete"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 5`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="download"
      isCurrent={false}
    >
      <IconDownload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Download"
        id="be.sidebarVersions.download"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 6`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="preview"
      isCurrent={false}
    >
      <IconOpenWith
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Preview"
        id="be.sidebarVersions.preview"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on permissions 7`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="promote"
      isCurrent={false}
    >
      <IconUpload
        height={12}
        width={12}
      />
      <FormattedMessage
        defaultMessage="Make Current"
        id="be.sidebarVersions.promote"
      />
    </VersionsItemAction>
  </Menu>
</DropdownMenu>
`;
